test/integration/bad/lang/bad_model_name_var.stan
data {
  // declare matching model name should fail
  int model_bad_model_name_var;  
}
parameters {
   real bar;
}
model {
}
